--- a/map.css
+++ b/map.css
@@ -1,7 +1,8 @@
 #container {
   position: relative;
-  width: 500px; /* needs to come from scope property */
-  height: 500px; /* needs to come from scope property */
+  width: 500px;
+  height: 500px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #map {
@@ -30,7 +31,7 @@
   border-bottom: 3px solid #e87825;
 }
 
-.cux-icon-close {
+.close-list {
   float: right;
   cursor: pointer;
 }
