--- a/map.css
+++ b/map.css
@@ -1,217 +1,38 @@
 #container {
   position: relative;
-  width: 1000px; /* needs to come from scope property */
-  height: 750px; /* needs to come from scope property */
+  width: 500px;
+  height: 500px;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
- html, body {
-    margin:0; padding:0;  width : 100%; height : 100%;
- }
 
 #map {
-  margin:0; padding:0;  width : 100%; height : 85%;
+  width: inherit;
+  height: inherit;
 }
 
-#mapview-header {
-  height: 10%;
-  width: 100%;
-  text-align: center;
-}
-
-#mapcontrols {
-  height: 5%;
-  width: 100%;
-}
-
-#mapview {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-#detailsview {
+#listview {
   position: absolute;
   background: white;
   opacity: .9;
   bottom: 0;
   z-index: 1000;
   padding: 10px;
-  width: 100%;
+  width: inherit;
   box-sizing: border-box;
   font-size: 12px;
 }
 
-.detailsview-name {
+.listview-name {
   font-weight: bold;
   font-size: 12px;
 }
 
-.detailsview-header {
+.listview-header {
   border-bottom: 3px solid #e87825;
 }
 
 .close-list {
   float: right;
-  cursor: pointer;
-}
-
-#client-address-input {
-  border-radius: 5px;
-  border: 1px solid #57585A;
-  box-sizing: content-box;
-  overflow: hidden;
-  float: right;
-  z-index: 1;
-  width: 283px;
-  height: 34px
-}
-
-#inputAddress {
-  width: 283px;
-  height: 34px
-}
-
-#inputAddressList {
-  width: 283px;
-  height: 34px;
-}
-
-.searchFilter {
-  width: 283px;
-  height: 34px;
-  float: left;
-}
-
-.arcgisSearch {
-  float: left;
-}
-
-
-#toggle {
-  position: absolute;
-  right: 0px;
-}
-
-#toggle-button {
-  background-color: white;
-  border-radius: 5px;
-  border: 1px solid #57585A;
-  box-sizing: content-box;
-  width: 80px;
-  height: 25px;
-  cursor: pointer;
-}
-
-#sort {
-  background-color: white;
-  border-radius: 5px;
-  border: 1px solid #57585A;
-  box-sizing: content-box;
-  width: 80px;
-  height: 25px;
-  cursor: pointer;
-}
-
-.provider-select {
-  cursor: pointer;
-}
-
-.largerIcon {
-  font-size: 1.3em;
-}
-
-/* List View Scrunched */
-#listview-wrapper {
-  width: 100%;
-  /*height: calc(100% - 45px);*/
-  bottom: 0;
-  left: 0;
-  right: 0;
-  /*overflow: auto;*/
-  background-color: rgba(255, 255, 255, 0.9);
-  z-index: 1000;
-}
-
-#listview-header {
-  height: 10%;
-  width: 100%;
-  text-align: center;
-}
-
-#listcontrols {
-  height: 5%;
-  width: 100%;
-  position: absolute;
-  top: 10%;
-}
-
-#listcontainer {
-  position: inherit;
-  padding-top: 8%;
-}
-
-#listtable {
-  width: 100%;
-  height: calc(100% - 110px);
-  overflow: auto;
-  position: absolute;
-}
-
-.table-listview {
-  width: 100%;
-}
-
-.table-listview > tbody > tr > td {
-  padding: 0px;
-  vertical-align: bottom;
-  width: 33.33%;
-}
-
-.distance {
-  padding-left: 30px !important;
-  vertical-align: inherit !important;
-  text-align: center;
-}
-
-.table-listview > tbody + tbody {
-  border-top: 2px solid #ddd;
-}
-
-.listview-options {
-  position: absolute;
-  right: 15px;
-  width: 200px;
-}
-
-.listview-details {
-  float: left;
-}
-
-.listview-icons {
-  vertical-align: middle;
-}
-
-#content-resizer {
-  height: 15px;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: #FFF;
-  cursor: n-resize;
-}
-
-.listview-h1 {
-  margin-bottom: 0;
-  padding-top: 10px;
-}
-
-#listview-sort table {
-  width: 100px;
-}
-
-#listview-sort tr:hover{
   cursor: pointer;
 }
 
@@ -226,365 +47,28 @@
   position: absolute;
   right: 20px;
   text-align: right;
-  top: 18%;
-  width: 390px;
+  top: 20px;
   white-space: nowrap;
   z-index: 1;
-  max-height: 50px;
 }
 
 #travel:hover {
   cursor: pointer;
 }
 
-.travel-type-icon {
-  vertical-align: top;
-  margin-top: 10px;
+.travel-open {
+  width: 120px;
 }
 
-.travel-type-icon:hover {
-  cursor: pointer;
+.travel-closed {
+  width: 40px;
 }
 
-.travel-type-icon-disabled {
-	vertical-align: top;
-	margin-top: 10px;
-	cursor: none;
-	opacity: 0.5
+#travel-icons {
+  margin-bottom: 3px;
 }
-
-.travel-type-icon-walk {
-  vertical-align: top;
-  margin-top: 10px;
-}
-
-.travel-type-icon-walk:hover {
-  cursor: pointer;
-}
-
-.travel-type-icon-walk-disabled {
-  vertical-align: top;
-  margin-top: 10px;
-  cursor: none;
-  opacity: 0.5
-}
-
-.travel-toggle-icon:hover {
-  cursor: pointer;
-}
-
-.travel-toggle-icon-disabled {
-  cursor: none;
-  opacity: 0.5
-}
-
-.travel-minimized {
-  width: 40px !important;
-  padding: 0px !important;
-}
-
-.spinner {
-  position: absolute;
-  left: 50%;
-  top: 10%;
-  height:30px;
-  width:30px;
-  margin:0px auto;
-  -webkit-animation: rotation .6s infinite linear;
-  -moz-animation: rotation .6s infinite linear;
-  -o-animation: rotation .6s infinite linear;
-  animation: rotation .6s infinite linear;
-  border-left:6px solid rgba(0,174,239,.15);
-  border-right:6px solid rgba(0,174,239,.15);
-  border-bottom:6px solid rgba(0,174,239,.15);
-  border-top:6px solid rgba(0,174,239,.8);
-  border-radius:100%;
-  z-index: 5;
-}
-
-@-webkit-keyframes rotation {
-   from {-webkit-transform: rotate(0deg);}
-   to {-webkit-transform: rotate(359deg);}
-}
-@-moz-keyframes rotation {
-   from {-moz-transform: rotate(0deg);}
-   to {-moz-transform: rotate(359deg);}
-}
-@-o-keyframes rotation {
-   from {-o-transform: rotate(0deg);}
-   to {-o-transform: rotate(359deg);}
-}
-@keyframes rotation {
-   from {transform: rotate(0deg);}
-   to {transform: rotate(359deg);}
-}
-
-
-/*#travel {
-  background-color: white;
-  border-radius: 5px;
-  border: 1px solid #57585A;
-  box-sizing: content-box;
-  overflow: hidden;
-  padding: 8px;
-  position: absolute;
-  right: 20px;
-  text-align: right;
-  top: 20px;
-  width: 20px;
-  white-space: nowrap;
-  z-index: 2;
-  max-height: 20px;
-}*/
 
 /* Popup override */
 .esriPopup {
   visibility: hidden !important;
-}
-
-/*! angularjs-slider - v2.11.0 - 
- (c) Rafal Zajac <rzajac@gmail.com>, Valentin Hervieu <valentin@hervieu.me>, Jussi Saarivirta <jusasi@gmail.com>, Angelin Sirbu <angelin.sirbu@gmail.com> - 
- https://github.com/angular-slider/angularjs-slider - 
- 2016-04-01 */
-rzslider {
-  position: relative;
-  display: inline-block;
-  width: 100%;
-  height: 4px;
-  margin: 35px 0 15px 0;
-  vertical-align: middle;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-rzslider[disabled] {
-  cursor: not-allowed;
-}
-
-rzslider[disabled] .rz-pointer {
-  cursor: not-allowed;
-  background-color: #d8e0f3;
-}
-
-rzslider span {
-  position: absolute;
-  display: inline-block;
-  white-space: nowrap;
-}
-
-rzslider .rz-base {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-}
-
-rzslider .rz-bar-wrapper {
-  left: 0;
-  z-index: 1;
-  width: 100%;
-  height: 32px;
-  padding-top: 16px;
-  margin-top: -16px;
-  box-sizing: border-box;
-}
-
-rzslider .rz-bar-wrapper.rz-draggable {
-  cursor: move;
-}
-
-rzslider .rz-bar {
-  left: 0;
-  z-index: 1;
-  width: 100%;
-  height: 4px;
-  background: #d8e0f3;
-  -webkit-border-radius: 2px;
-     -moz-border-radius: 2px;
-          border-radius: 2px;
-}
-
-rzslider .rz-bar.rz-selection {
-  z-index: 2;
-  background: #0db9f0;
-  -webkit-border-radius: 2px;
-     -moz-border-radius: 2px;
-          border-radius: 2px;
-}
-
-rzslider .rz-pointer {
-  top: -14px;
-  z-index: 3;
-  width: 32px;
-  height: 32px;
-  cursor: pointer;
-  background-color: #0db9f0;
-  -webkit-border-radius: 16px;
-     -moz-border-radius: 16px;
-          border-radius: 16px;
-}
-
-rzslider .rz-pointer:after {
-  position: absolute;
-  top: 12px;
-  left: 12px;
-  width: 8px;
-  height: 8px;
-  background: #ffffff;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
-  content: '';
-}
-
-rzslider .rz-pointer:hover:after {
-  background-color: #ffffff;
-}
-
-rzslider .rz-pointer.rz-active {
-  z-index: 4;
-}
-
-rzslider .rz-pointer.rz-active:after {
-  background-color: #451aff;
-}
-
-rzslider .rz-bubble {
-  bottom: 16px;
-  padding: 1px 3px;
-  color: #55637d;
-  cursor: default;
-}
-
-rzslider .rz-bubble.rz-selection {
-  top: 16px;
-}
-
-rzslider .rz-bubble.rz-limit {
-  color: #55637d;
-}
-
-rzslider .rz-ticks {
-  position: absolute;
-  top: -3px;
-  left: 0;
-  z-index: 1;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  height: 0;
-  padding: 0 11px;
-  margin: 0;
-  list-style: none;
-  box-sizing: border-box;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-}
-
-rzslider .rz-ticks .rz-tick {
-  width: 10px;
-  height: 10px;
-  text-align: center;
-  cursor: pointer;
-  background: #d8e0f3;
-  border-radius: 50%;
-}
-
-rzslider .rz-ticks .rz-tick.rz-selected {
-  background: #0db9f0;
-}
-
-rzslider .rz-ticks .rz-tick .rz-tick-value {
-  position: absolute;
-  top: -30px;
-  transform: translate(-50%, 0);
-}
-
-rzslider.rz-vertical {
-  position: relative;
-  width: 4px;
-  height: 100%;
-  padding: 0;
-  margin: 0 20px;
-  vertical-align: baseline;
-}
-
-rzslider.rz-vertical .rz-base {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-}
-
-rzslider.rz-vertical .rz-bar-wrapper {
-  top: auto;
-  left: 0;
-  width: 32px;
-  height: 100%;
-  padding: 0 0 0 16px;
-  margin: 0 0 0 -16px;
-}
-
-rzslider.rz-vertical .rz-bar {
-  bottom: 0;
-  left: auto;
-  width: 4px;
-  height: 100%;
-}
-
-rzslider.rz-vertical .rz-pointer {
-  top: auto;
-  bottom: 0;
-  left: -14px !important;
-}
-
-rzslider.rz-vertical .rz-bubble {
-  bottom: 0;
-  left: 16px !important;
-  margin-left: 3px;
-}
-
-rzslider.rz-vertical .rz-bubble.rz-selection {
-  top: auto;
-  left: 16px !important;
-}
-
-rzslider.rz-vertical .rz-ticks {
-  top: 0;
-  left: -3px;
-  z-index: 1;
-  width: 0;
-  height: 100%;
-  padding: 11px 0;
-  -webkit-flex-direction: column-reverse;
-      -ms-flex-direction: column-reverse;
-          flex-direction: column-reverse;
-}
-
-rzslider.rz-vertical .rz-ticks .rz-tick {
-  vertical-align: middle;
-}
-
-rzslider.rz-vertical .rz-ticks .rz-tick .rz-tick-value {
-  top: auto;
-  left: 22px;
-  transform: translate(0, -28%);
-}
-
-
-
-/* rzslider overrides */
-
-rzslider {  
-  margin-top: 27px;
-  margin-right: 0px;
-  margin-left: 1px;
-  margin-bottom: 50px;
-  width: 260px;
-}
-
-rz-bar.rz-selection {  
-  background: #dad9d9;  
 }
