--- a/map.css
+++ b/map.css
@@ -64,7 +64,7 @@
   overflow: hidden;
   float: right;
   z-index: 1;
-  width: 283px;
+  width: 45%;
   height: 34px;
   margin-right: 5%;
 }
@@ -80,7 +80,7 @@
 }
 
 .searchFilter {
-  width: 283px;
+  width: 45%;
   height: 34px;
   float: left;
 }
@@ -104,6 +104,7 @@
   width: 80px;
   height: 25px;
   cursor: pointer;
+  vertical-align: bottom;
 }
 
 #sort {
@@ -123,26 +124,27 @@
 /* List View Scrunched */
 #listview-wrapper {
   width: 100%;
-  /*height: calc(100% - 45px);*/
+  height: 100%;
   bottom: 0;
   left: 0;
   right: 0;
   /*overflow: auto;*/
   background-color: rgba(255, 255, 255, 0.9);
   z-index: 1000;
+  font-size: 12px;
 }
 
 #listview-header {
-  height: 10%;
+  height: 15%;
   width: 100%;
   text-align: center;
 }
 
 #listcontrols {
-  height: 5%;
+  height: 8%;
   width: 100%;
   position: absolute;
-  top: 10%;
+  top: 15%;
 }
 
 #listcontainer {
