--- a/map.css
+++ b/map.css
@@ -8,18 +8,65 @@
     margin:0; padding:0;  width : 100%; height : 100%;
  }
 
-#map {
-  margin:0; padding:0;  width : 100%; height : 70%;
+ #flyoutmenu-wrapper {
+  width: 20%;
+  max-width: 300px;
+  min-width: 150px;
+  height: 100%;
+  float: left;
 }
 
+#flyoutmenu-menuButton {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  top: calc(5.833rem + 5.333rem);
+  z-index: 999;
+  left: 30px;
+}
+
+#page-content-wrapper {
+  max-width: 80%;
+  width: 80%;
+  height: 100%;
+  bottom: 800px;
+  float:left;
+  background: rgba(255,255,255,255);
+}
+
+#page-content-wrapper.toggled {
+  display: block;
+}
+
+.hsVerticalNavigation {
+  height: calc(100vh - 5.417rem - 2.167rem - 24px);
+  height: -moz-calc(100vh - 5.417rem - 2.167rem - 24px);
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  width: 98%;
+}
+
+.noflyout {
+  width: 100% !important;
+  max-width: 100% !important;
+}
+
+#map {
+  margin:0; padding:0;  width : 100%;
+}
+
+/*.mapnoflyout {
+  height: calc(100vh - 50rem) !important;
+}*/
+
 #mapview-header {
-  height: 15%;
+  height: 70px;
   width: 100%;
   text-align: center;
 }
 
 #mapcontrols {
-  height: 8%;
+  height: 40px;
   width: 100%;
 }
 
@@ -65,18 +112,17 @@
   overflow: hidden;
   float: right;
   z-index: 1;
-  width: 45%;
   height: 34px;
   margin-right: 5%;
 }
 
 #inputAddress {
-  width: 283px;
+  width: 200px;
   height: 34px
 }
 
 #inputAddressList {
-  width: 283px;
+  width: 200px;
   height: 34px;
 }
 
@@ -136,21 +182,15 @@
 }
 
 #listview-header {
-  height: 15%;
+  height: 70px;
   width: 100%;
   text-align: center;
 }
 
 #listcontrols {
-  height: 8%;
+  height: 40px;
   width: 100%;
-  position: absolute;
   top: 15%;
-}
-
-#listcontainer {
-  position: inherit;
-  padding-top: 7%;
 }
 
 #listtable {
@@ -227,11 +267,11 @@
   position: absolute;
   right: 20px;
   text-align: right;
-  top: 27%;
-  width: 80%;
+  top: calc(100vh - 70rem);
+  width: calc(100vh - 53rem);
   white-space: nowrap;
   z-index: 1;
-  height: 10%;
+  height: 50px;
 }
 
 #travel:hover {
@@ -373,9 +413,9 @@ input[type=range]::-ms-tooltip {
   display: inline-block;
 }
 
-/*! angularjs-slider - v2.11.0 - 
- (c) Rafal Zajac <rzajac@gmail.com>, Valentin Hervieu <valentin@hervieu.me>, Jussi Saarivirta <jusasi@gmail.com>, Angelin Sirbu <angelin.sirbu@gmail.com> - 
- https://github.com/angular-slider/angularjs-slider - 
+/*! angularjs-slider - v2.11.0 -
+ (c) Rafal Zajac <rzajac@gmail.com>, Valentin Hervieu <valentin@hervieu.me>, Jussi Saarivirta <jusasi@gmail.com>, Angelin Sirbu <angelin.sirbu@gmail.com> -
+ https://github.com/angular-slider/angularjs-slider -
  2016-04-01 */
 rzslider {
   position: relative;
@@ -608,15 +648,15 @@ rzslider.rz-vertical .rz-ticks .rz-tick .rz-tick-value {
 
 /* rzslider overrides */
 
-rzslider {  
+rzslider {
   margin-top: 27px;
   margin-right: 0px;
   margin-left: 1px;
   margin-bottom: 50px;
 }
 
-rz-bar.rz-selection {  
-  background: #dad9d9;  
+rz-bar.rz-selection {
+  background: #dad9d9;
 }
 
 .oui-pnav-2 {
